--- a/assets/craftguide/lang/en_US.lang
+++ b/assets/craftguide/lang/en_US.lang
@@ -11,7 +11,7 @@ craftguide.gui.config.pause=Pause while open (singleplayer only)
 craftguide.gui.config.show_ids=Show item ID and damage values
 craftguide.gui.config.enable_keybind=Enable keybind
 craftguide.gui.config.enable_item_recipe=Enable CraftGuide item recipe (requires restart)
-craftguide.gui.config.hide_mundane_potions=Hide mundane potions from failed brewing combinations
+craftguide.gui.config.hide_mundane_potions=Hide mundane potions from failed brewing combinations (requires recipe reload)
 craftguide.gui.config.theme_debugging=Output excessive theme debugging information to CraftGuide.log
 
 craftguide.gui.config.reload_recipes.button=Reload
