--- a/src/main/resources/assets/craftguide/lang/en_US.lang
+++ b/src/main/resources/assets/craftguide/lang/en_US.lang
@@ -17,6 +17,7 @@ craftguide.gui.config.enable_keybind=Enable keybind
 craftguide.gui.config.enable_item_recipe=Enable CraftGuide item recipe (requires restart)
 craftguide.gui.config.hide_mundane_potions=Hide mundane potions from failed brewing combinations (requires recipe reload)
 craftguide.gui.config.theme_debugging=Output excessive theme debugging information to CraftGuide.log
+craftguide.gui.config.textinput_clear_on_right_click=Clear text input on right click
 
 craftguide.gui.config.reload_recipes.button=Reload
 craftguide.gui.config.reload_recipes=Reload recipes
