Got the item working; first steps to far-future API re-organization
I've duplicated the various API Slot types into a sub-package. I intend to
keep the old copies until at *least* Minecraft 1.14, if not later, so
updating old code is not urgent.

--- a/src/main/resources/assets/craftguide/lang/en_US.lang
+++ b/src/main/resources/assets/craftguide/lang/en_US.lang
@@ -33,3 +33,4 @@ craftguide.gui.config.current_theme.button=Next theme
 craftguide.gui.config.current_theme.format_string=Current theme: %s
 
 craftguide.gui.task_running=Working...
+craftguide.gui.empty_oredict_type=Empty Ore Dictionary list: '%1$s'
